Upgrade Spacing: now is more dynamic with 6px base and add Xaxis compatibility. Upgrade colors: new bg_color variable. Upgrade text-selections variables. Minor bug fixes.

--- a/SASS/css/_colors.sass
+++ b/SASS/css/_colors.sass
@@ -63,6 +63,5 @@ $primary-color: $peter-river
 $secondary-color: $belize-hole
 $tertiary-color: $concrete
 
+$bg-color: $white
 $border-color: $grey_d
-
-$debug: red
