--- a/SASS/css/_txt-selection.sass
+++ b/SASS/css/_txt-selection.sass
@@ -1,7 +1,7 @@
 ::selection
   background: $primary-color
-  color: $white
+  color: $bg-color
 
 ::-moz-selection
   background: $primary-color
-  color: $white
+  color: $bg-color
